# UKMM

./: CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: rust.yml
crates/: bnp.rs
crates/uk-content/: Cargo.toml
crates/uk-content-derive/src/: aamp.rs  byml.rs
crates/uk-content/src/: constants.rs  lib.rs  resource.rs
crates/uk-content/src/actor/: info.rs  prelude.rs  residents.rs
crates/uk-content/src/actor/params/: aiprog.rs  aischedule.rs  animinfo.rs  aslist.rs  atcl.rs  atcllist.rs  aware.rs  bonectrl.rs  chemical.rs  damage.rs  drop.rs  general.rs  life.rs  link.rs  lod.rs  modellist.rs  physics.rs  recipe.rs  rgbw.rs  rgconfig.rs  rgconfiglist.rs  shop.rs  umii.rs
crates/uk-content/src/actor/params/as/: anim_seq.rs  ext_bit_index.rs  ext_blender_bone.rs  ext_float_array.rs  ext_frame_ctrl.rs  ext_hold_events.rs  ext_int_array.rs  ext_ranges.rs  mod.rs  (+12 more)
crates/uk-content/src/chemical/: chmres.rs
crates/uk-content/src/cooking/: data.rs  recipe.rs  single_recipe.rs  system.rs
crates/uk-content/src/data/: gamedata.rs  savedata.rs  shop.rs
crates/uk-content/src/demo/: mod.rs
crates/uk-content/src/eco/: areadata.rs  level.rs  status.rs
crates/uk-content/src/event/: info.rs  residents.rs
crates/uk-content/src/font/: mod.rs
crates/uk-content/src/layout/: mod.rs
crates/uk-content/src/map/: lazy.rs  static_.rs  unit.rs
crates/uk-content/src/map/mainfield/: location.rs
crates/uk-content/src/message/: mod.rs
crates/uk-content/src/quest/: product.rs
crates/uk-content/src/sound/: barslist.rs
crates/uk-content/src/tips/: mod.rs
crates/uk-content/src/util/: converts.rs  mod.rs  parsers.rs
crates/uk-content/src/worldmgr/: info.rs
crates/uk-localization/localization/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  ru.json  vi.json  zh.json
crates/uk-manager/: Cargo.toml
crates/uk-manager/src/: bnp.rs  core.rs  deploy.rs  lib.rs  mods.rs
crates/uk-manager/src/bnp/: aslist.rs  maps.rs  old.rs  texts.rs
crates/uk-mod/: Cargo.toml
crates/uk-mod/src/: lib.rs  pack.rs  unpack.rs
crates/uk-reader/src/: lib.rs
crates/uk-settings/: Cargo.toml
crates/uk-settings/src/: lib.rs  util.rs
crates/uk-ui/src/: syntect.rs  visuals.rs
crates/uk-util/: Cargo.toml
crates/uk-util/src/: context.rs  endianness.rs  language.rs  lib.rs  uk_error.rs
src/: cli.rs  gui.rs  logger.rs  main.rs
src/gui/: deploy.rs  info.rs  menus.rs  modals.rs  mods.rs  package.rs  profiles.rs  settings.rs  tasks.rs  update.rs
